Update and delete in CRUD

--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -12,6 +12,9 @@
       <li class="nav-item">
         <a class="nav-link" href="courses/create">Đăng khoá học</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="me/stored/courses">Khoá học của tôi</a>
+      </li>
     </ul>
   </div>
 </nav>
