--- a/src/resources/views/apple-watch.hbs
+++ b/src/resources/views/apple-watch.hbs
@@ -11,7 +11,7 @@
                     <p class="card-text">&bull; OS: {{this.os}}</p>
                     <p class="card-text">&bull; {{this.feature}}</p>
                     <div class="text-center">
-                        <button type="button" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off">
+                        <button type="button" class="btn btn-primary btn-detail" data-target="#detail" data-id="{{this._id}}" data-toggle="modal" aria-pressed="false" autocomplete="off">
                             Xem chi tiết
                         </button>
                     </div>
@@ -20,4 +20,40 @@
         </div>
         {{/each}}
     </div>
+</div>
+
+<div tabindex="-1" class="modal fade" id="detail" style="display: none;" aria-hidden="true">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+                <h2 class="modal-title">Chi tiết sản phẩm</h2>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+			</div>
+            {{#each applewatches}}
+            <div class="show-detail">
+                <div  class="modal-body">
+                    <ul class="list-group">
+                        <img class="card-img-top" src="{{this.img}}">
+                        <div class="card-body">
+                            <h5 class="card-title text-center">{{this.name}}</h5>
+                            <p class="card-text text-center">{{this.price}} VNĐ</p>
+                            <p class="card-text">&bull; Mô tả: {{this.description}}</p>
+                            <p class="card-text">&bull; Màn hình: {{this.monitor}}</p>
+                            <p class="card-text">&bull; OS: {{this.os}}</p>
+                            <p class="card-text">&bull; {{this.feature}}</p>
+                        </div>
+                    </ul>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary btn-add-to-cart"
+                            data-id="{{this._id}}" data-name="{{this.name}}" data-img="{{this.img}}" data-price="{{this.price}}">
+                            Thêm vào giỏ hàng
+                    </button>
+                </div>
+            </div>
+            {{/each}}
+		</div>
+	</div>
 </div>
