--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -24,7 +24,7 @@
             <button class="btn btn-outline-success my-2 my-lg-0" type="submit">Tìm kiếm</button>
         </form>
         <div class="button-group">
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#phonenumber-search">
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#phonenumber-search" onclick="window.location.href='/order'">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-card-checklist" viewBox="0 0 16 16">
                     <path d="M14.5 3a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h13zm-13-1A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-13z"></path>
                     <path d="M7 5.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm-1.496-.854a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 1 1 .708-.708l.146.147 1.146-1.147a.5.5 0 0 1 .708 0zM7 9.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm-1.496-.854a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 0 1 .708-.708l.146.147 1.146-1.147a.5.5 0 0 1 .708 0z"></path>
@@ -77,88 +77,29 @@
                 <h5 class="mb-0">Giỏ hàng</h5>
               </div>
               <div class="card-body">
-                
-                {{!-- Lặp đoạn này --}}
-                <!-- Single item -->
-                <div class="row">
-                  <div class="col-lg-3 col-md-12 mb-4 mb-lg-0">
-                    <!-- Image -->
-                    <div class="bg-image hover-overlay hover-zoom ripple rounded" data-mdb-ripple-color="light">
-                      <img src="https://cdn.tgdd.vn/Products/Images/42/213032/iphone-12-pro-vang-1-org.jpg"
-                        class="w-100" />
-                      <a href="#!">
-                        <div class="mask" style="background-color: rgba(251, 251, 251, 0.2)"></div>
-                      </a>
-                    </div>
-                    <!-- Image -->
-                  </div>
 
-                  {{!-- Thông tin --}}
-                  <div class="col-lg-5 col-md-6 mb-4 mb-lg-0 mt-4">
-                    <!-- Data -->
-                    <p><strong>iPhone 12 Pro</strong></p>
-                    <button type="button" class="btn btn-primary btn-sm me-1 mb-2" data-mdb-toggle="tooltip"
-                      title="Xoá khỏi giỏ hàng">
-                      <i class="fas fa-trash"></i>
-                    </button>
-                    <!-- Data -->
-                  </div>
-
-                  <div class="col-lg-4 col-md-6 mb-4 mb-lg-0 mt-4">
-                    <!-- Quantity -->
-                    <div class="d-flex mb-4" style="max-width: 300px">
-                      <button class="btn btn-primary px-3 me-2"
-                        onclick="this.parentNode.querySelector('input[type=number]').stepDown()">
-                        <i class="fas fa-minus"></i>
-                      </button>
-
-                      <div class="form-outline mx-1">
-                        <input id="form-quantity" min="0" name="quantity" value="1" type="number" class="form-control" />
-                      </div>
-
-                      <button class="btn btn-primary px-3 ms-2"
-                        onclick="this.parentNode.querySelector('input[type=number]').stepUp()">
-                        <i class="fas fa-plus"></i>
-                      </button>
-                    </div>
-                    <!-- Quantity -->
-
-                    <!-- Price -->
-                    <p class="text-start text-md-center">
-                      <strong>$17.99</strong>
-                    </p>
-                    <!-- Price -->
-                  </div>
-                </div>
-                <!-- Single item -->
-
-                {{!-- Đường kẻ ngang --}}
-                <hr class="my-4" />
+                <div id="added-items"></div>
 
               </div>
             </div>
             <div class="card mb-4">
               <div class="card-body">
                 <p><strong>Dự kiến giao hàng</strong></p>
-                <p class="mb-0">12.10.2020 - 14.10.2020</p>
+                <p id="delivery-time" class="mb-0"></p>
               </div>
             </div>
-            {{!-- Phương thức thanh toán --}}
+            
             <div class="card mb-4 mb-lg-0">
               <div class="card-body">
                 <p><strong>Phương thức thanh toán</strong></p>
                 <img class="me-2" width="45px"
-                  src="https://mdbootstrap.com/wp-content/plugins/woocommerce-gateway-stripe/assets/images/visa.svg"
-                  alt="Visa" />
+                  src="https://mdbootstrap.com/wp-content/plugins/woocommerce-gateway-stripe/assets/images/visa.svg"/>
                 <img class="me-2" width="45px"
-                  src="https://mdbootstrap.com/wp-content/plugins/woocommerce-gateway-stripe/assets/images/amex.svg"
-                  alt="American Express" />
+                  src="https://mdbootstrap.com/wp-content/plugins/woocommerce-gateway-stripe/assets/images/amex.svg"/>
                 <img class="me-2" width="45px"
-                  src="https://mdbootstrap.com/wp-content/plugins/woocommerce-gateway-stripe/assets/images/mastercard.svg"
-                  alt="Mastercard" />
+                  src="https://mdbootstrap.com/wp-content/plugins/woocommerce-gateway-stripe/assets/images/mastercard.svg"/>
                 <img class="me-2" width="45px"
-                  src="https://mdbootstrap.com/wp-content/plugins/woocommerce/includes/gateways/paypal/assets/images/paypal.png"
-                  alt="PayPal acceptance mark" />
+                  src="https://mdbootstrap.com/wp-content/plugins/woocommerce/includes/gateways/paypal/assets/images/paypal.png"/>
               </div>
             </div>
           </div>
@@ -171,14 +112,31 @@
               </div>
               <div class="card-body">
                 <ul class="list-group list-group-flush">
-                  <li
-                    class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
+                  <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
+                    Khách hàng
+                    <div class="form-outline">
+                      <input type="text" name="name" class="form-control" placeholder="Vui lòng nhập họ và tên"/>
+                    </div>
+                  </li>
+                  <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
+                    SĐT
+                    <div class="form-outline">
+                      <input type="text" name="phone" class="form-control" placeholder="Nhập số điện thoại"/>
+                    </div>
+                  </li>
+                  <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
+                    Địa chỉ
+                    <div class="form-outline">
+                      <input type="text" name="address" class="form-control" placeholder="Nhập địa chỉ giao hàng"/>
+                    </div>
+                  </li>
+                  <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
                     Sản phẩm
-                    <span>$53.98</span>
+                    <span id="sum-price"></span>
                   </li>
                   <li class="list-group-item d-flex justify-content-between align-items-center px-0">
                     Vận chuyển
-                    <span>Miễn phí</span>
+                    <span id="delivery-shipping">Miễn phí</span>
                   </li>
                   <li
                     class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
@@ -188,7 +146,7 @@
                         <p class="mb-0">(đã bao gồm VAT)</p>
                       </strong>
                     </div>
-                    <span><strong>$53.98</strong></span>
+                    <span><strong id="total-price"></strong></span>
                   </li>
                 </ul>
 
@@ -245,4 +203,118 @@
       $('#phonenumber-search').modal('hide')
     })
   })
+
+  document.addEventListener('DOMContentLoaded', function loadCart() {
+    // Add items to cart
+    var cart = new Array()
+    if (localStorage.getItem('cart') !== null) {
+        cart = JSON.parse(localStorage['cart'])
+    }
+    for (let i = 0; i < cart.length; i++) {
+      document.getElementById('added-items').innerHTML +=
+      `
+      <div class="row">
+        <div class="col-lg-3 col-md-12 mb-4 mb-lg-0">
+          <div class="bg-image hover-overlay hover-zoom ripple rounded" data-mdb-ripple-color="light">
+            <img src="${cart[i].img}"
+              class="w-100" />
+          </div>
+        </div>
+
+        <div class="col-lg-5 col-md-6 mb-4 mb-lg-0 mt-4">
+          <strong>${cart[i].name}<br></strong>
+          <button type="button" class="btn btn-primary btn-sm me-1 mb-2" data-mdb-toggle="tooltip"
+            title="Xoá khỏi giỏ hàng" onclick="removeItemFromCart('${cart[i]._id}')" >
+            <i class="fas fa-trash"></i>
+          </button>
+        </div>
+
+        <div class="col-lg-4 col-md-6 mb-4 mb-lg-0 mt-4">
+          <div class="d-flex mb-4" style="max-width: 300px">
+            <button class="btn btn-primary px-3 me-2 minus"
+              onclick="minusBtn('${cart[i]._id}', '${cart[i].price}')">
+              <i class="fas fa-minus"></i>
+            </button>
+
+            <div class="form-outline mx-1">
+              <input id="form-quantity-${cart[i]._id}" min="1" name="quantity" value="1" type="number" class="form-control quantity" />
+            </div>
+
+            <button class="btn btn-primary px-3 ms-2 plus"
+              onclick="plusBtn('${cart[i]._id}', '${cart[i].price}')">
+              <i class="fas fa-plus"></i>
+            </button>
+          </div>
+
+          <p class="text-start text-md-center">
+            <strong id="price-${cart[i]._id}" class="price">${cart[i].price}</strong>
+          </p>
+        </div>
+      </div>
+      <hr class="my-4" />
+      `
+    }
+    // Update total price
+    var price = document.getElementsByClassName('price')
+    var totalPrice = 0
+    for (let i = 0; i < price.length; i++) {
+      totalPrice += Number(price[i].innerHTML)
+    }
+    document.getElementById('sum-price').innerHTML = totalPrice
+    document.getElementById('total-price').innerHTML = totalPrice
+  })
+
+  function removeItemFromCart(id) {
+    var cart = JSON.parse(localStorage['cart'])
+    for (let i = 0; i < cart.length; i++) {
+      if (cart[i]._id == id) {
+        cart.splice(i, 1)
+      }
+    }
+    localStorage['cart'] = JSON.stringify(cart)
+    alert('Vui lòng tải lại trang để cập nhật lại giỏ hàng')
+  }
+
+  function minusBtn(id, price) {
+    var quantity = document.getElementById('form-quantity-' + id).value--
+    quantity--
+    if (quantity < 1) {
+      quantity = 1
+      document.getElementById('form-quantity-' + id).value = 1
+    }
+    document.getElementById('price-' + id).textContent = price * quantity
+    var price = document.getElementsByClassName('price')
+    var totalPrice = 0
+    for (let i = 0; i < price.length; i++) {
+      totalPrice += Number(price[i].innerHTML)
+    }
+    document.getElementById('sum-price').innerHTML = totalPrice
+    document.getElementById('total-price').innerHTML = totalPrice
+  }
+
+  function plusBtn(id, price) {
+    var quantity = document.getElementById('form-quantity-' + id).value++
+    quantity++
+    document.getElementById('price-' + id).textContent = price * quantity
+    var price = document.getElementsByClassName('price')
+    var totalPrice = 0
+    for (let i = 0; i < price.length; i++) {
+      totalPrice += Number(price[i].innerHTML)
+    }
+    document.getElementById('sum-price').innerHTML = totalPrice
+    document.getElementById('total-price').innerHTML = totalPrice
+  }
+
+  document.addEventListener('DOMContentLoaded', function deliveryTime() {
+    var timeTag = document.getElementById('delivery-time')
+    const date = new Date()
+    date.setDate(date.getDate() + 5)
+    document.getElementById('delivery-time').innerHTML =
+            date.getDate() + "/" + (date.getMonth() + 1) + "/" + date.getFullYear()
+    date.setDate(date.getDate() + 2)
+    document.getElementById('delivery-time').innerHTML +=
+            " - " + date.getDate() + "/" + (date.getMonth() + 1) + "/" + date.getFullYear()
+  })
+
 </script>
+
